[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"
authors = ["costa86 <costa86@zoho.com> "]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
serde_json = { version = "1.0" }
